welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:8: error: not found: value setPosition
      setPosition(a,b)
      ^